Fixed cpp build for windows.

--- a/helloworldcxx/CMakeLists.txt
+++ b/helloworldcxx/CMakeLists.txt
@@ -23,10 +23,14 @@ IF(APPLE)
 		set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 ELSEIF(WIN32)
         message(STATUS ">>> On Windows, resetting header and lib paths...")
-        set(P3D_HEADER_PATH "C:\\Panda3D-1.10.11-x64\\include\\") 
+        set(P3D_HEADER_PATH "C:\\Panda3D-1.10.11-x64\\include\\")  
         set(P3D_DLL_PATH "C:\\Panda3D-1.10.11-x64\\lib\\") 
+        set(P3D_BULLET_HEADER_PATH "C:\\Panda3D-1.10.11-x64\\thirdparty\\win-libs-vc14-x64\\bullet\\include\\") 
+        set(P3D_BULLET_LIB_PATH "C:\\Panda3D-1.10.11-x64\\thirdparty\\win-libs-vc14-x64\\bullet\\lib\\")  
         set(P3D_DLL ${P3D_DLL_FILES}) 
+        set(P3D_STATIC_FILES P3D_STATIC) # Very interesting nomenclature for WIN32 
 		set(DLL_SUFFIX ".lib") 
+		set(STATIC_SUFFIX ".lib") 
 		set(RT_PATH ${CMAKE_BINARY_DIR}/Release) 
 ENDIF()
 set(CMAKE_CXX_STANDARD 11)
