--- a/helloworldcxx/CMakeLists.txt
+++ b/helloworldcxx/CMakeLists.txt
@@ -74,5 +74,5 @@ ENDIF()
 add_custom_command(
         TARGET ${TARGET_NAME} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E make_directory ${RT_PATH}/assets
-		COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_SOURCE_DIR}/assets/*.bam ${RT_PATH}/assets         
+		COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_SOURCE_DIR}/assets/rocket.bam ${RT_PATH}/assets         
 )
